Added files into folders.
Need to start doing frontend design and connecting the backand with frontend.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "Junmysql"
+        "Junmysql",
+        "personalitytest",
+        "personalitytestpage",
+        "Searchbar",
+        "winecard"
     ]
 }
