Header, search, and sql csv
Need to add MBTI testing and pair it with sql queries.
Need to modify the search results

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
     "cSpell.words": [
+        "fontawesome",
+        "fortawesome",
         "Junmysql",
+        "MBTI",
         "personalitytest",
         "personalitytestpage",
         "Searchbar",
+        "webfonts",
         "winecard"
     ]
 }
