Added pagination, made searchbar.tsx responsive

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "codepaths",
         "fontawesome",
         "fortawesome",
         "Junmysql",
@@ -7,6 +8,7 @@
         "personalitytest",
         "personalitytestpage",
         "Searchbar",
+        "tsbuildinfo",
         "webfonts",
         "winecard"
     ]
