--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js", 
+    "start": "node dist/server.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -15,5 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.6"
+  },
+  "devDependencies": {
+    "@types/mysql": "^2.15.26"
   }
 }
