fetch test data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,11 @@
         "fontawesome",
         "fortawesome",
         "Junmysql",
+        "kakaotalk",
         "MBTI",
         "personalitytest",
         "personalitytestpage",
+        "resveratrol",
         "Searchbar",
         "tsbuildinfo",
         "webfonts",
