Share result via email, sms, and instagram

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "fontawesome",
         "fortawesome",
         "Junmysql",
+        "Kakao",
         "kakaotalk",
         "MBTI",
         "personalitytest",
