--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "codepaths",
+        "CURDATE",
+        "Extraversion",
         "fontawesome",
         "fortawesome",
         "Junmysql",
