added mbti wine recommendation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,55 @@
 {
     "cSpell.words": [
+        "Barolo",
+        "Chenin",
         "codepaths",
         "CURDATE",
+        "ENFJ",
+        "ENFP",
+        "ENTJ",
+        "ENTP",
+        "ESFJ",
+        "ESFP",
+        "ESTJ",
+        "ESTP",
         "Extraversion",
         "fontawesome",
         "fortawesome",
+        "Grenache",
+        "Grigio",
+        "INFJ",
+        "INFP",
+        "INTJ",
+        "INTP",
+        "ISFJ",
+        "ISFP",
+        "ISTJ",
+        "ISTP",
         "Junmysql",
         "Kakao",
         "kakaotalk",
+        "Malbec",
         "MBTI",
+        "minerality",
+        "Moscato",
+        "Nebbiolo",
+        "Oaked",
         "personalitytest",
         "personalitytestpage",
+        "Prosecco",
         "resveratrol",
+        "Rosé",
+        "Sauvignon",
         "Searchbar",
+        "Spätburgunder",
+        "Syrah",
+        "tannicity",
         "tsbuildinfo",
+        "Unoaked",
         "webfonts",
         "winecard"
+    ],
+    "cSpell.enableFiletypes": [
+        "!plaintext"
     ]
 }
