Set homepage in package.json and rebuild project

--- a/client/package.json
+++ b/client/package.json
@@ -48,5 +48,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/lodash": "^4.17.0"
-  }
+  },
+  "homepage": "http://www.traitsstates.com"
 }
