--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -14,9 +14,11 @@ jobs:
 
     - name: Install Dependencies
       run: npm install
+      working-directory: ./client  # Set the working directory to client
 
     - name: Build
       run: npm run build --if-present
+      working-directory: ./client  # Set the working directory to client
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
@@ -25,4 +27,3 @@ jobs:
         BRANCH: gh-pages  # The branch the action should deploy to.
         FOLDER: client/build  # The folder the action should deploy.
         CLEAN: true  # Automatically remove deleted files from the deploy branch
-
