--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
-        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_PAT }}
-        BRANCH: gh-pages
-        FOLDER: client/build
-        CLEAN: true
+        token: ${{ secrets.MY_GITHUB_PAT }}  # Using the correct secret name for your PAT
+        branch: gh-pages  # The branch the action should deploy to
+        folder: client/build  # The folder the action should deploy
+        clean: true  # Automatically remove deleted files from the deploy branch
