--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -24,6 +24,5 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         folder: ./client/build
-        ssh-key: ${{ secrets.MY_GIYHUB_PAT }}
-        BRANCH: gh-pages
+        ACCESS_TOKEN: ${{ secrets.MY_GIYHUB_PAT }}
         CLEAN: true
