--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -24,5 +24,5 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         folder: client/build
-        ACCESS_TOKEN: ${{ secrets.MY_GIYHUB_PAT }}
+        token: ${{ secrets.MY_GIYHUB_PAT }}
         CLEAN: true
