--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "ESTJ",
         "ESTP",
         "Extraversion",
+        "firestore",
         "fontawesome",
         "fortawesome",
         "Grenache",
@@ -44,6 +45,7 @@
         "Spätburgunder",
         "Syrah",
         "tannicity",
+        "traitstastes",
         "tsbuildinfo",
         "Unoaked",
         "webfonts",
