--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "Oaked",
         "personalitytest",
         "personalitytestpage",
+        "postbuild",
         "Prosecco",
         "resveratrol",
         "Rosé",
