--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,9 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/node_modules/
 /.pnp
 .pnp.js
+.env
+/client/node_modules/
+/server/node_modules/
+/server/dist
+/client/build/
 
 # testing
 /coverage
@@ -13,6 +18,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
