--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-DB_HOST=i2cpbxbi4neiupid.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
-DB_USER=zuwfxnbs64jrqgbh
-DB_PASS=bcj5ammyl7z05o5o
-DB_NAME=ompitdeb8x4n7mme
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=Junmysql99!
+DB_NAME=Traits_Tastes
 PORT=3001
